Added Styling for Terminal Body

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,7 +42,7 @@ const { title } = Astro.props as Props;
 			}
 
 			.main-container {
-				background-color: aqua;
+				background-color: transparent;
 				width: 80vw;
 				height: 60vh;
 			}
