--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,18 +30,111 @@ import { Icon } from 'astro-icon';
 					</div>
 					<div class="second">&#63743;</div>
 				</div>
-				<div class="input"></div>
-				<div class="right-arrow"></div>
+				<div class="input">
+					<p>This is the input field</p>
+				</div>
+				<div class="right-arrow">
+					<div class="third">
+						<p>11:05:27 am</p>
+					</div>
+					<div class="fourth">
+						<Icon name="fluent:checkmark-16-filled" />
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 </Layout>
 
 <style lang="css">
-	@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap");
+	@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;400;500;600;700&display=swap');
 
 	:root {
 		--astro-gradient: linear-gradient(0deg, #4f39fa, #da62c4);
+	}
+
+	.third p {
+		font-size: 0.7em;
+		font-family: "Source Code Pro", monospace;
+		margin-left: 16px;
+	}
+
+	.fourth {
+		width: 30px;
+		height: 100%;
+		background: #063441;
+		position: relative;
+		left: -90px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-size: 0.9em;
+	}
+
+	.fourth:before {
+		content: "";
+		position: absolute;
+		left: -10px;
+		bottom: 0;
+		width: 0;
+		height: 0;
+		border-right: 10px solid #063441;
+		border-top: 10px solid transparent;
+		border-bottom: 10px solid transparent;
+	}
+
+	.third:before {
+		content: "";
+		position: absolute;
+		left: 8px;
+		bottom: 0;
+		width: 0;
+		height: 0;
+		border-right: 10px solid #eee9d6;
+		border-top: 10px solid transparent;
+		border-bottom: 10px solid transparent;
+		z-index: 3;
+	}
+
+	.third {
+		width: 110px;
+		height: 100%;
+		left: 32px;
+		position: relative;
+		background: #eee9d6;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-size: 0.9em;
+		color: #063441;
+	}
+
+	.right-arrow {
+		height: 100%;
+		width: 140px;
+		display: flex;
+		justify-content: space-evenly;
+		flex-direction: row;
+		/* border: 1px solid #4f39fa; */
+	}
+
+	.input {
+		height: 100%;
+		width: 100%;
+		display: flex;
+		align-items: center;
+		flex-direction: row;
+		justify-content: flex-start;
+		/* border: 1px solid #4f39fa */
+	}
+
+	.input p {
+		font-size: 0.9em;
+		width: auto;
+		height: auto;
+		color: #b5a7c9;
+		font-family: "Source Code Pro", monospace;
+		font-weight: 600;
 	}
 
 	[astro-icon="ci:home-alt-fill"] {
@@ -50,6 +143,20 @@ import { Icon } from 'astro-icon';
 		height: 15px;
 		margin-left: 25px;
 		margin-right: 5px;
+	}
+
+	[astro-icon="fluent:checkmark-16-filled"] {
+		color: #32ca43;
+		width: 15px;
+		height: 15px;
+		margin-right: 10px;
+		margin-top: 2px;
+	}
+
+	[astro-icon="lucide:clock-2"] {
+		color: #063441;
+		width: 12px;
+		height: 12px;
 	}
 
 	[astro-icon="fa-solid:tilde"] {
@@ -64,7 +171,7 @@ import { Icon } from 'astro-icon';
 		display: flex;
 		justify-content: space-evenly;
 		flex-direction: row;
-		border: 1px solid #4f39fa;
+		/* border: 1px solid #4f39fa; */
 	}
 
 	.second {
@@ -119,7 +226,7 @@ import { Icon } from 'astro-icon';
 	.input-container {
 		width: 98%;
 		height: 20px;
-		border: #4f39fa 1px solid;
+		/* border: #4f39fa 1px solid; */
 		margin-top: 5px;
 		margin-left: auto;
 		margin-right: auto;
@@ -132,7 +239,7 @@ import { Icon } from 'astro-icon';
 	.login-container {
 		width: 98%;
 		height: 15px;
-		border: #4f39fa 1px solid;
+		/* border: #4f39fa 1px solid; */
 		display: flex;
 		align-items: center;
 		justify-content: flex-start;
@@ -145,7 +252,7 @@ import { Icon } from 'astro-icon';
 		font-size: 0.7em;
 		width: auto;
 		height: auto;
-		color: #b5a7c9;
+		color: #8c8794;
 		font-family: "Source Code Pro", monospace;
 	}
 
@@ -251,7 +358,7 @@ import { Icon } from 'astro-icon';
 	.terminal-body {
 		width: 100%;
 		height: 100%;
-		border: #4f39fa 2px solid;
+		/* border: #4f39fa 2px solid; */
 		border-radius: 0px 0px 10px 10px;
 		display: flex;
 		flex-direction: column;
