--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,10 @@ const { title } = Astro.props as Props;
 
 			.bg {
 				width: 100%;
-				background-color: blueviolet;
+				background-image: url(/assets/background.jpeg);
+				background-position: center center;
+				background-repeat: no-repeat;
+				background-size: cover;
 				height: 100vh;
 				display: flex;
 				justify-content: center;
