--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { Icon } from "astro-icon";
+
+// Date & Time
 ---
 
 <Layout title="Welcome to Astro.">
@@ -20,7 +22,7 @@ import { Icon } from "astro-icon";
 		</div>
 		<div class="terminal-body">
 			<div class="login-container">
-				<p>Last login: Wed Aug 17 15:44:24 on dylan.dev</p>
+				<p id="login-date"></p>
 			</div>
 			<div class="input-container">
 				<div class="left-arrow">
@@ -35,7 +37,7 @@ import { Icon } from "astro-icon";
 				</div>
 				<div class="right-arrow">
 					<div class="third">
-						<p>11:05:27 am</p>
+						<p id="right-time"></p>
 					</div>
 					<div class="fourth">
 						<Icon name="fluent:checkmark-16-filled" />
@@ -158,7 +160,8 @@ import { Icon } from "astro-icon";
 		margin-top: 2px;
 		height: 1em;
 		background: #b5a7c9;
-		animation: typewriter 3s steps(26) 1s forwards, blink 750ms steps(25) infinite;
+		animation: typewriter 3s steps(26) 1s forwards,
+			blink 750ms steps(25) infinite;
 	}
 
 	@keyframes blink {
@@ -401,48 +404,31 @@ import { Icon } from "astro-icon";
 		justify-content: flex-start;
 		align-items: flex-start;
 	}
-
-	.text-gradient {
-		font-weight: 900;
-		background-image: var(--astro-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 100% 200%;
-		background-position-y: 100%;
-		border-radius: 0.4rem;
-		animation: pulse 4s ease-in-out infinite;
-	}
-
-	@keyframes pulse {
-		0%,
-		100% {
-			background-position-y: 0%;
-		}
-		50% {
-			background-position-y: 80%;
-		}
-	}
-
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		background: #4f39fa;
-		padding: 1rem;
-		border-radius: 0.4rem;
-		color: var(--color-bg);
-	}
-
-	.instructions code {
-		font-size: 0.875em;
-		border: 0.1em solid var(--color-border);
-		border-radius: 4px;
-		padding: 0.15em 0.25em;
-	}
-
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
 </style>
+
+<script is:inline>
+	const date = new Date();
+	const loginElement = document.getElementById("login-date");
+
+	let dateString =
+		date.getDate() +
+		"-" +
+		(date.getMonth() + 1) +
+		"-" +
+		date.getFullYear() +
+		" " +
+		date.getHours() +
+		":" +
+		date.getMinutes();
+
+	loginElement.innerHTML = `Last login: ${dateString}`;
+
+	const timeElement = document.getElementById("right-time");
+	let timeString = date.getHours().toString().padStart(2, '0') + ":" + date.getSeconds().toString().padStart(2, '0') + ":" + date.getMilliseconds().toString().slice(1);
+
+	if (date.getHours() > 12) {
+		timeElement.innerHTML = `${timeString} pm`;
+	} else {
+		timeElement.innerHTML = `${timeString} am`;
+	}
+</script>
