--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { Icon } from "astro-icon";
+import "../styles/style.css";
 
 // Date & Time
 ---
@@ -36,9 +37,9 @@ import { Icon } from "astro-icon";
 					<label id="input" for="input"
 						>Press to access site:&nbsp;
 					</label>
-					<button class="lock-btn">
-						<Icon class="lock" name="mdi:lock" />
-						<Icon class="unlock" name="mdi:lock-open-variant" />
+					<button onclick="onClick()" class="lock-btn">
+						<Icon id="lock" class="lock" name="mdi:lock" />
+						<!-- <Icon class="unlock" name="mdi:lock-open-variant" /> -->
 					</button>
 				</div>
 				<div class="right-arrow">
@@ -50,7 +51,7 @@ import { Icon } from "astro-icon";
 					</div>
 				</div>
 			</div>
-			<div class="card-container">
+			<div id="card" class="card-container-hidden">
 				<div class="about-card">
 					<div class="title-container">
 						<h1>About Me</h1>
@@ -93,608 +94,7 @@ import { Icon } from "astro-icon";
 	</div>
 </Layout>
 
-<style lang="css">
-	@import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-
-	.subtitle {
-		width: auto;
-		height: fit-content;
-		margin-bottom: -30px;
-		font-weight: 400;
-	}
-
-	.title-container {
-		height: auto;
-		width: 100%;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		margin-bottom: -10px;
-		margin-top: -30px;
-	}
-
-	.gtk {
-		width: 85%;
-		height: 33%;
-		display: flex;
-		flex-direction: column;
-		margin-right: 10px;
-		margin-left: 10px;
-		margin-bottom: 15px;
-	}
-
-	.tech-stack {
-		width: 85%;
-		height: 33%;
-		display: flex;
-		flex-direction: column;
-		margin-right: 10px;
-		margin-left: 10px;
-	}
-
-	.about-card h1 {
-		font-size: 2em;
-		font-weight: 700;
-	}
-
-	.github-card {
-		width: 100%;
-		height: 33%;
-		/* border: 1px red solid; */
-		display: flex;
-		flex-direction: column;
-		margin-bottom: 5px;
-		background: rgba(100, 65, 165, 30%);
-		background: -webkit-linear-gradient(
-			to right,
-			rgba(42, 8, 69, 30%),
-			rgba(100, 65, 165, 30%)
-		);
-		background: linear-gradient(
-			to right,
-			rgba(42, 8, 69, 30%),
-			rgba(100, 65, 165, 30%)
-		);
-		backdrop-filter: blur(100px);
-		border-radius: 10px;
-		box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px,
-			rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px,
-			rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px,
-			rgba(0, 0, 0, 0.07) 0px 32px 64px;
-	}
-
-	.linkedin-card {
-		width: 100%;
-		height: 33%;
-		/* border: 1px red solid; */
-		display: flex;
-		flex-direction: column;
-		margin-bottom: 5px;
-		margin-top: 5px;
-		background: rgba(100, 65, 165, 30%);
-		background: -webkit-linear-gradient(
-			to right,
-			rgba(42, 8, 69, 30%),
-			rgba(100, 65, 165, 30%)
-		);
-		background: linear-gradient(
-			to right,
-			rgba(42, 8, 69, 30%),
-			rgba(100, 65, 165, 30%)
-		);
-		backdrop-filter: blur(100px);
-		border-radius: 10px;
-		box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px,
-			rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px,
-			rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px,
-			rgba(0, 0, 0, 0.07) 0px 32px 64px;
-	}
-
-	.resume-card {
-		width: 100%;
-		height: 33%;
-		/* border: 1px red solid; */
-		display: flex;
-		flex-direction: column;
-		margin-top: 5px;
-		background: rgba(100, 65, 165, 30%);
-		background: -webkit-linear-gradient(
-			to right,
-			rgba(42, 8, 69, 30%),
-			rgba(100, 65, 165, 30%)
-		);
-		background: linear-gradient(
-			to right,
-			rgba(42, 8, 69, 30%),
-			rgba(100, 65, 165, 30%)
-		);
-		backdrop-filter: blur(100px);
-		border-radius: 10px;
-		box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px,
-			rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px,
-			rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px,
-			rgba(0, 0, 0, 0.07) 0px 32px 64px;
-	}
-
-	.links-container {
-		width: 50%;
-		height: 100%;
-		/* border: 1px red solid; */
-		display: flex;
-		flex-direction: column;
-		border-radius: 10px;
-		margin-left: 5px;
-	}
-
-	.about-card {
-		width: 80%;
-		height: 100%;
-		/* border: 1px red solid; */
-		display: flex;
-		flex-direction: column;
-		background: rgba(100, 65, 165, 30%);
-		background: -webkit-linear-gradient(
-			to right,
-			rgba(42, 8, 69, 30%),
-			rgba(100, 65, 165, 30%)
-		);
-		background: linear-gradient(
-			to right,
-			rgba(42, 8, 69, 30%),
-			rgba(100, 65, 165, 30%)
-		);
-		border-radius: 10px;
-		margin-right: 5px;
-		align-items: center;
-		justify-content: center;
-		color: #eeeeee;
-		text-align: left;
-		backdrop-filter: blur(500px);
-		box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px,
-			rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px,
-			rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px,
-			rgba(0, 0, 0, 0.07) 0px 32px 64px;
-	}
-
-	.card-container {
-		width: 98%;
-		height: 96%;
-		margin-left: auto;
-		margin-right: auto;
-		margin-bottom: 10px;
-		margin-top: 10px;
-		/* border: 1px red solid; */
-		display: flex;
-		flex-direction: row;
-		font-family: "PT Sans", sans-serif;
-	}
-
-	.lock-btn {
-		width: 50px;
-		height: 100%;
-		border: none;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		border-radius: 3px;
-		background-color: #eeeeee;
-		cursor: pointer;
-		opacity: 0;
-		animation: 1s ease 4s normal forwards fadeIn;
-	}
-
-	.lock-btn:hover .lock,
-	.lock-btn .unlock {
-		display: none;
-	}
-
-	.lock-btn:hover .unlock {
-		display: inline;
-	}
-
-	[astro-icon="mdi:lock"] {
-		color: #f4655b;
-		width: 15px;
-		height: 15px;
-		padding-top: 2px;
-	}
-
-	[astro-icon="mdi:lock-open-variant"] {
-		color: #32ca43;
-		width: 15px;
-		height: 15px;
-		padding-top: 2px;
-	}
-
-	input {
-		height: 100%;
-		width: fit-content;
-		background-color: #4f39fa;
-		border: none;
-		z-index: 3;
-		opacity: 0;
-		animation: 1s ease 4s normal forwards fadeIn;
-	}
-
-	.third p {
-		font-size: 0.7em;
-		font-family: "Source Code Pro", monospace;
-		margin-left: 16px;
-	}
-
-	.fourth {
-		width: 30px;
-		height: 100%;
-		background: #063441;
-		position: relative;
-		left: -90px;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		font-size: 0.9em;
-	}
-
-	.fourth:before {
-		content: "";
-		position: absolute;
-		left: -10px;
-		bottom: 0;
-		width: 0;
-		height: 0;
-		border-right: 10px solid #063441;
-		border-top: 10px solid transparent;
-		border-bottom: 10px solid transparent;
-	}
-
-	.third:before {
-		content: "";
-		position: absolute;
-		left: 8px;
-		bottom: 0;
-		width: 0;
-		height: 0;
-		border-right: 10px solid #eeeeee;
-		border-top: 10px solid transparent;
-		border-bottom: 10px solid transparent;
-		z-index: 3;
-	}
-
-	.third {
-		width: 110px;
-		height: 100%;
-		left: 32px;
-		position: relative;
-		background: #eeeeee;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		font-size: 0.9em;
-		color: #063441;
-	}
-
-	.right-arrow {
-		height: 100%;
-		width: 140px;
-		display: flex;
-		justify-content: space-evenly;
-		flex-direction: row;
-		/* border: 1px solid #4f39fa; */
-	}
-
-	.input {
-		height: 100%;
-		width: 100%;
-		display: flex;
-		align-items: center;
-		flex-direction: row;
-		justify-content: flex-start;
-		/* border: 1px solid #4f39fa */
-	}
-
-	.input label {
-		font-size: 0.9em;
-		width: auto;
-		height: auto;
-		position: relative;
-		color: #b5a7c9;
-		font-family: "Source Code Pro", monospace;
-		font-weight: 600;
-	}
-
-	.input label::before,
-	label::after {
-		content: "";
-		position: absolute;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-	}
-
-	.input label::before {
-		background: #0e1f48;
-		animation: typewriter 3s steps(22) 1s forwards;
-	}
-
-	.input label::after {
-		width: 0.5em;
-		margin-top: 2px;
-		height: 1em;
-		visibility: visible;
-		opacity: 1;
-		background: #b5a7c9;
-		animation: typewriter 3s steps(22) 1s forwards,
-			fadeOut 0.1s ease 4s forwards;
-	}
-
-	@keyframes fadeOut {
-		to {
-			background: transparent;
-		}
-	}
-
-	@keyframes fadeIn {
-		from {
-			opacity: 0;
-		}
-
-		to {
-			opacity: 1;
-		}
-	}
-
-	@keyframes typewriter {
-		to {
-			left: 100%;
-		}
-	}
-
-	[astro-icon="ci:home-alt-fill"] {
-		color: #eeeeee;
-		width: 15px;
-		height: 15px;
-		margin-left: 25px;
-		margin-right: 5px;
-	}
-
-	[astro-icon="fluent:checkmark-16-filled"] {
-		color: #32ca43;
-		width: 15px;
-		height: 15px;
-		margin-right: 10px;
-		margin-top: 2px;
-	}
-
-	[astro-icon="lucide:clock-2"] {
-		color: #063441;
-		width: 12px;
-		height: 12px;
-	}
-
-	[astro-icon="fa-solid:tilde"] {
-		color: #eeeeee;
-		width: 12px;
-		height: 12px;
-	}
-
-	.left-arrow {
-		height: 100%;
-		width: 90px;
-		display: flex;
-		justify-content: space-evenly;
-		flex-direction: row;
-		/* border: 1px solid #4f39fa; */
-	}
-
-	.second {
-		width: 30px;
-		height: 100%;
-		background: #eeeeee;
-		position: relative;
-		left: -65px;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		font-size: 0.9em;
-	}
-
-	.second:before {
-		content: "";
-		position: absolute;
-		right: -10px;
-		bottom: 0;
-		width: 0;
-		height: 0;
-		border-left: 10px solid #eeeeee;
-		border-top: 10px solid transparent;
-		border-bottom: 10px solid transparent;
-	}
-
-	.first {
-		width: 70px;
-		height: 100%;
-		left: 10px;
-		position: relative;
-		background: #268cd1;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		font-size: 0.9em;
-		color: #eeeeee;
-	}
-
-	.first:before {
-		content: "";
-		position: absolute;
-		right: -10px;
-		bottom: 0;
-		width: 0;
-		height: 0;
-		border-left: 10px solid #268cd1;
-		border-top: 10px solid transparent;
-		border-bottom: 10px solid transparent;
-	}
-
-	.input-container {
-		width: 98%;
-		height: 20px;
-		/* border: #4f39fa 1px solid; */
-		margin-top: 5px;
-		margin-left: auto;
-		margin-right: auto;
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		justify-content: space-between;
-	}
-
-	.login-container {
-		width: 98%;
-		height: 15px;
-		/* border: #4f39fa 1px solid; */
-		display: flex;
-		align-items: center;
-		justify-content: flex-start;
-		margin-top: 5px;
-		margin-left: auto;
-		margin-right: auto;
-	}
-
-	.login-container p {
-		font-size: 0.7em;
-		width: auto;
-		height: auto;
-		color: #8c8794;
-		font-family: "Source Code Pro", monospace;
-	}
-
-	.red-dot {
-		height: 10px;
-		width: 10px;
-		border-radius: 50%;
-		background-color: #f4655b;
-		display: inline-block;
-		margin-right: 6px;
-	}
-
-	.yellow-dot {
-		height: 10px;
-		width: 10px;
-		border-radius: 50%;
-		background-color: #fcbc32;
-		display: inline-block;
-		margin-right: 6px;
-	}
-
-	.green-dot {
-		height: 10px;
-		width: 10px;
-		border-radius: 50%;
-		background-color: #32ca43;
-		display: inline-block;
-	}
-
-	.terminal-container {
-		width: 100%;
-		height: 100%;
-		background-color: rgba(14, 31, 72, 50%);
-		backdrop-filter: blur(10px);
-		border-radius: 10px;
-		display: flex;
-		align-items: center;
-		flex-direction: column;
-	}
-
-	.terminal-header {
-		width: 100%;
-		background: #0f0c29; /* fallback for old browsers */
-		background: -webkit-linear-gradient(
-			to right,
-			#24243e,
-			#302b63,
-			#0f0c29
-		); /* Chrome 10-25, Safari 5.1-6 */
-		background: linear-gradient(
-			to right,
-			#24243e,
-			#302b63,
-			#0f0c29
-		); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-		border-radius: 10px 10px 0px 0px;
-		height: 25px;
-		display: flex;
-		backdrop-filter: blur(10px);
-		align-items: center;
-		justify-content: space-between;
-		/* border: #4f39fa 2px solid; */
-	}
-
-	.nav-btn-container {
-		margin-top: 2px;
-		width: 33%;
-		height: 100%;
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		justify-content: flex-start;
-		margin-left: 8px;
-		left: 0;
-		/* border: #4f39fa 1px solid; */
-	}
-
-	.text-container {
-		width: 33%;
-		height: 100%;
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		justify-content: center;
-		left: 0;
-		/* border: #4f39fa 1px solid; */
-	}
-
-	.text-container p {
-		font-size: 0.6em;
-		font-weight: bold;
-		color: #b5a7c9;
-	}
-
-	.dummy {
-		width: 33%;
-		height: 100%;
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		justify-content: flex-end;
-		left: 0;
-		/* border: #4f39fa 1px solid; */
-		margin-right: 8px;
-	}
-
-	.dummy p {
-		font-size: 0.6em;
-		font-weight: bold;
-		color: #b5a7c9;
-	}
-
-	.terminal-body {
-		width: 100%;
-		height: 100%;
-		/* border: #4f39fa 2px solid; */
-		border-radius: 0px 0px 10px 10px;
-		display: flex;
-		flex-direction: column;
-		justify-content: flex-start;
-		backdrop-filter: blur(500px);
-		align-items: flex-start;
-		box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-			rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-			
-	}
-</style>
-
-<script is:inline>
+<script defer is:inline>
 	const date = new Date();
 	const loginElement = document.getElementById("login-date");
 
@@ -722,5 +122,35 @@ import { Icon } from "astro-icon";
 		timeElement.innerHTML = `${timeString} pm`;
 	} else {
 		timeElement.innerHTML = `${timeString} am`;
+	}
+
+	const terminalContainer = document.getElementById("card");
+	const lock = document.getElementById("lock").firstChild;
+	function onClick() {
+		terminalContainer.className = `card-container-visible ${document.documentElement.className}`;
+
+		var x = lock.getAttribute("d");
+		var y = lock.getAttribute("fill");
+		var z = terminalContainer.className;
+		console.log(x);
+
+		if (
+			x ===
+			"M12 17a2 2 0 0 0 2-2 2 2 0 0 0-2-2 2 2 0 0 0-2 2 2 2 0 0 0 2 2m6-9a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V10a2 2 0 0 1 2-2h1V6a5 5 0 0 1 5-5 5 5 0 0 1 5 5v2h1m-6-5a3 3 0 0 0-3 3v2h6V6a3 3 0 0 0-3-3z"
+		) {
+			x =
+				"M18 1c-2.76 0-5 2.24-5 5v2H4a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12c1.11 0 2-.89 2-2V10a2 2 0 0 0-2-2h-1V6c0-1.66 1.34-3 3-3s3 1.34 3 3v2h2V6c0-2.76-2.24-5-5-5m-8 12a2 2 0 0 1 2 2c0 1.11-.89 2-2 2a2 2 0 1 1 0-4z";
+			y = "#32ca43";
+			z = `card-container-visible ${document.documentElement.className}`;
+		} else {
+			x =
+				"M12 17a2 2 0 0 0 2-2 2 2 0 0 0-2-2 2 2 0 0 0-2 2 2 2 0 0 0 2 2m6-9a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V10a2 2 0 0 1 2-2h1V6a5 5 0 0 1 5-5 5 5 0 0 1 5 5v2h1m-6-5a3 3 0 0 0-3 3v2h6V6a3 3 0 0 0-3-3z";
+			y = "currentColor";
+			z = "card-container-hidden";
+		}
+
+		lock.setAttribute("d", x);
+		lock.setAttribute("fill", y);
+		terminalContainer.className = z;
 	}
 </script>
